--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "start": "nodemon index.ts",
     "start:prod": "ts-node index.ts",
-    "test": "test"
+    "test": "vitest"
   },
   "author": "Sam James",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "typescript": "^5.2.2"
+    "@types/supertest": "^2.0.12",
+    "supertest": "^6.3.3",
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.4"
   },
   "dependencies": {
     "express": "^4.18.2",
