--- a/.github/workfows/Test-Server.yaml
+++ b/.github/workfows/Test-Server.yaml
@@ -25,9 +25,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-      - run: npm ci
-        working-directory: ./server
+      - run: npm i
       - run: npm run build --if-present
-        working-directory: ./server
-      - run: npm test
-        working-directory: ./server
+      - run: npm test:sever
