--- a/.github/workflows/Test-Server.yaml
+++ b/.github/workflows/Test-Server.yaml
@@ -5,9 +5,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [$default-branch]
+    branches: ["main"]
   pull_request:
-    branches: [$default-branch]
+    branches: ["main"]
 
 jobs:
   build:
@@ -26,5 +26,4 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
       - run: npm i
-      - run: npm run build --if-present
-      - run: npm test:sever
+      - run: npm test:server
