--- a/.github/workflows/Test-Server.yaml
+++ b/.github/workflows/Test-Server.yaml
@@ -26,4 +26,4 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
       - run: npm i
-      - run: npm test:server
+      - run: npm run test:server
