--- a/.github/workflows/Build-Server-Image.yaml
+++ b/.github/workflows/Build-Server-Image.yaml
@@ -13,4 +13,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build the Docker image
-        run: docker build --file ./server/Dockerfile --tag red-eye-effect:$(date +%s)
+        run: npm run build:server
