--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   ],
   "main": "index.js",
   "scripts": {
-    "test:server": "npm run test --workspace=server"
+    "test:server": "npm run test --workspace=server",
+    "build:server": "npm run build:image --workspace=server"
   },
   "repository": {
     "type": "git",
