--- a/.github/workflows/Build-Server-Image.yaml
+++ b/.github/workflows/Build-Server-Image.yaml
@@ -1,10 +1,10 @@
 name: Docker Server CI
 
 on:
-  push:
-    branches: ["main"]
-  pull_request:
-    branches: ["main"]
+  workflow_run:
+    workflows: ["Test Server"]
+    types:
+      - completed
 
 jobs:
   build:
