--- a/.github/workflows/Build-Server-Image.yaml
+++ b/.github/workflows/Build-Server-Image.yaml
@@ -24,7 +24,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
-          images: samjamesjazz/red-eye-effect
+          images: samjamesjazz/red-eye-effect:main
 
       - name: Get Git SHA
         id: git_sha
@@ -37,6 +37,6 @@ jobs:
           file: ./server/Dockerfile
           push: true
           tags: |
-            latest
+            main
             ${{ steps.git_sha.outputs.sha }}
           labels: ${{ steps.meta.outputs.labels }}
